@@ -1,5 +1,5 @@
 package ca.bcit.comp2613.a00578633.util;
 
-public class TeamQQException extends Exception{
+public class TeamQQException extends Exception {
 
 }
