@@ -6,46 +6,71 @@ import java.util.Comparator;
 
 import ca.bcit.comp2613.a00578633.model.Player;
 
-public class TestDriver{
+public class TestDriver {
 
 	public static void main(String[] args) throws Exception {
-		try{
-			System.out.println("Number of players generated: 25");
-			ArrayList<Player> players = CreatePlayer.createPlayers(25); // change number of instances
-			//Player.printPlayers(players);
-			
-			System.out.println("Players sorted by Province, Last Name, First Name");
-			Comparator<Player> compareProvinceLastNameFirstName = new Comparator<Player>(){
-				
-				@Override
-				public int compare(Player o1, Player o2){
-					int retval = o1.getCurrentProvince().compareTo(o2.getCurrentProvince());
-					if(retval == 0){
-					  retval = o1.getLastName().compareTo(o2.getLastName());
-					  if (retval == 0) {
+		System.out.println("Number of players generated: 25");
+		ArrayList<Player> players = CreatePlayer.createPlayers(25); // change number of instances
+		System.out.println();
+
+		System.out.println("Players sorted by Current Province [ASC], Last Name [ASC], First Name [ASC]");
+		sortProvinceLastNameFirstName(players);
+		System.out.println();
+		System.out.println("Players sorted by Performance [DESC], Earnings [DESC]");
+		sortPerformanceEarnings(players);
+
+	}
+
+	/*
+	 * Takes an ArrayList <Player> sorting them by currentProvince, lastName, then firstName in ASC order.
+	 */
+	public static void sortProvinceLastNameFirstName(ArrayList<Player> players) {
+		ArrayList<Player> playerList = new ArrayList<>();
+		playerList.addAll(players);
+
+		Comparator<Player> list = new Comparator<Player>() {
+
+			@Override
+			public int compare(Player o1, Player o2) {
+				int retval = o1.getCurrentProvince().compareTo(o2.getCurrentProvince());
+				if (retval == 0) {
+					retval = o1.getLastName().compareTo(o2.getLastName());
+					if (retval == 0) {
 						retval = o1.getFirstName().compareTo(o2.getFirstName());
-					  }
 					}
-					return retval;	
 				}
-			};
-			
-			Collections.sort(players, compareProvinceLastNameFirstName);
-			for (Player player : players) {
-				System.out.println(player);
+				return retval;
 			}
-			/*
-			ArrayList<Player> playersByCurProv = Player.searchPlayersByCurrentProvince(players, "BC"); // change Province arg
-			Player.printPlayers(playersByCurProv);
-			System.out.println("--------------------------------");
-			System.out.println("Player Searched by Last Name Regex: J*");
-			System.out.println("--------------------------------");
-			ArrayList<Player> playersByLastNameRegex = Player.searchPlayersByLastNameRegex(players, "J.*"); // change regex arg
-			Player.printPlayers(playersByLastNameRegex);		
-			*/
-			
-		} catch (PlayerPerformanceException e) {
-			System.err.println("Caught PlayerPerformanceException: Player cannot have 0 performance"  );
+		};
+
+		Collections.sort(playerList, list);
+		for (Player player : playerList) {
+			System.out.println(player);
+		}
+	}
+
+	/*
+	 * Takes an ArrayList <Player> sorting them by shootingPerformance and MoneyEarned in DESC order
+	 */
+	public static void sortPerformanceEarnings(ArrayList<Player> players) {
+		ArrayList<Player> playerList = new ArrayList<>();
+		playerList.addAll(players);
+
+		Comparator<Player> list = new Comparator<Player>() {
+
+			@Override
+			public int compare(Player o1, Player o2) {
+				int retval = o2.getShootingPerformance() - o1.getShootingPerformance();
+				if (retval == 0) {
+					retval = o2.getMoneyEarned() - o1.getMoneyEarned();
+				}
+				return retval;
+			}
+		};
+
+		Collections.sort(playerList, list);
+		for (Player player : playerList) {
+			System.out.println(player);
 		}
 	}
 
