@@ -1,10 +1,17 @@
 Asn#4 Change Log: June 11, 2014:
 
-Removed the following methods from the CreatePlayer class:
+Removed the following methods from usage in the CreatePlayer class:
     getShootingPerformance();
     getTeamQQ();
 
-Added Comparator to TestDriver
+Removed search methods from TestDriver:
+    searchPlayersByCurrentProvince()
+    searchPlayersByLastNameRegex();
+
+Added two Comparator methods to TestDriver:
+    sortProvinceLastNameFirstName();
+    sortPerformanceEarnings();
+    
 
 
 
